test/files/neg/classtags_contextbound_c.check
classtags_contextbound_c.scala:4: error: No ClassTag available for T
  def mkArray[T] = Array[T]()
                           ^
1 error
